src/test/deca/context/invalid/our_tests/jb-wrong-call.deca
// Description:
//    Calling a method on something else than an Object
//
// Resultats:
//    Sould throw Contextual Error (rule 3.71)
//
// Historique:
//    cree le 22/01/2017

{
    null.getValue();
    1.getValue();
    true.getValue();
}
